PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
15 Oct 2015, PHP 7.0.0 RC 5

- Mcrypt:
  . Fixed bug #70625 (mcrypt_encrypt() won't return data when no IV was
    specified under RC4). (Nikita)

- Phpdbg
  . Fixed bug #70614 (incorrect exit code in -rr mode with Exceptions). (Bob)

01 Oct 2015, PHP 7.0.0 RC 4

- Core:
  . Added zend_internal_function.reserved[] fields. (Dmitry)
  . Fixed bug #70557 (Memleak on return type verifying failed). (Laruence)
  . Fixed bug #70555 (fun_get_arg() on unsetted vars return UNKNOW). (Laruence)
  . Fixed bug #70548 (Redundant information printed in case of uncaught engine
    exception). (Laruence)
  . Fixed bug #70547 (unsetting function variables corrupts backtrace).
    (Laruence)
  . Fixed bug #70528 (assert() with instanceof adds apostrophes around class
    name). (Laruence)
  . Fixed bug #70481 (Memory leak in auto_global_copy_ctor() in ZTS build).
    (Laruence)

- DOM:
  . Fixed bug #70558 ("Couldn't fetch" error in 
    DOMDocument::registerNodeClass()). (Laruence) 

- FPM:
  . Fixed bug #70538 ("php-fpm -i" crashes). (rainer dot jung at
    kippdata dot de)
  . Fixed bug #70279 (HTTP Authorization Header is sometimes passed to newer
    reqeusts). (Laruence)

- Opcache
  . Attmpt to fix "Unable to reattach to base address" problem. (Matt Ficken)

- OpenSSL
  . Require at least OpenSSL version 0.9.8. (Jakub Zelenka)
  . Fixed bug #68312 (Lookup for openssl.cnf causes a message box). (Anatol)

- Phar:
  . Fixed bug #69720 (Null pointer dereference in phar_get_fp_offset()). (Stas)
  . FIxed bug #70433 (Uninitialized pointer in phar_make_dirstream when zip
    entry filename is "/"). (Stas)

- Phpdbg:
  . Fixed bug #70532 (phpdbg must respect set_exception_handler). (Bob)
  . Fixed bug #70531 (Run and quit mode (-qrr) should not fallback to
    interactive mode). (Bob)